# imalink

./: .env.example  .gitignore  CHANGELOG.md  CLEANUP_PLAN.md  FRONTEND_BACKEND_DATA_TRANSFER_SPEC.md  FRONTEND_FREEZE_STATUS.md  IMALINK_WHITE_PAPER.md  IMPORTSESSION_REFACTORING_COMPLETE.md  QT_FRONTEND_GUIDE.md  README.md  RELEASE_CHECKLIST_1.0.md  RELEASE_PROCEDURE.md  alembic.ini  api-documentation.html  openapi.json  pyproject.toml  setup-api-client.sh  setup-svelte.sh
fase1/: .env.example  100_PERCENT_PHOTO_CENTRIC_COMPLETE.md  API_DOCUMENTATION_UPDATES.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE.md  DEMO_README.md  FILESTORAGE_PROPERTY_REMOVAL.md  FILE_STORAGE_API_STANDARDIZATION.md  QUICK_TEST_SETUP.md  README.md  REFACTORING_COMPLETE.md  SETUP.md  TESTING_AUTH.md  api_testing.ipynb  cli_tester.py  finpuss_todo.md  fix_api_tests.py  fix_api_tests_v2.py  pyproject.toml  pytest.ini  requirements.txt  reset_database.py  test_auth.py  test_batch_endpoint.py  test_exif.py  test_exif_full.py  test_image_processor.py  test_rotation_hash.py  test_storage_api.py  test_thumbnail_direct.py  test_thumbnail_rotation.py  test_user_isolation.py
fase1/demos/: README.md
fase1/desktop_demo/: README.md  author_crud_cli.py  author_crud_demo.py  requirements.txt
fase1/docs/: DATABASE_STATS_ENDPOINT.md  HOTPREVIEW_FRAME_ARCHITECTURE.md  IMAGE_POOL.md  IMPORT_AND_STORAGE.md  IMPORT_ARCHITECTURE.md  IMPORT_SYSTEM_README.md  PHOTO_COLLECTION_SYSTEM.md  PHOTO_SEARCH_IMPLEMENTATION.md  RELEASE_NOTES.md  SCHEMA_UPDATE_HOTPREVIEW.md  SCHEMA_UPDATE_PREVIEW_IMAGE.md  TIMELINE_API_PROPOSAL.md  finpuss_todo.md
fase1/logo/: README.md
fase1/python_demos/: author_demo.py  cli_tester.py  database_debug_demo.py  health_demo.py  import_session_demo.py  my_demo.py  run_all_demos.py  test_disable_auth.py
fase1/scripts/: README.md  api_fresh_start.py  reset_database.py  reset_options.py  test_database_lock.py
fase1/src/: config.py  main.py  test_components.py  (+3 more)
mini-frontend/: QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt
(+515 files in other folders)
