[project]
name = "fase1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "cairosvg>=2.8.2",
    "fastapi>=0.118.0",
    "imagehash>=4.3.2",
    "piexif>=1.1.3",
    "pillow>=11.3.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "black==23.10.1",
    "httpx==0.25.2",
    "isort==5.12.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "requests>=2.32.5",
]
