[project]
name = "imalink-mini-frontend"
version = "0.1.0"
description = "Mini desktop frontend for ImaLink photo management system"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.24.0",
    "Pillow>=10.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mini-frontend = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
